force-app/main/default/objects/Applicant__c/fields/ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantName__c</fullName>
    <description>Applicant Name</description>
    <label>Applicant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>