force-app/main/default/objects/Applicant__c/fields/ApplicantNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNumber__c</fullName>
    <description>Applicant number</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Applicant Number</label>
    <type>AutoNumber</type>
</CustomField>