force-app/main/default/objects/Applicant__c/fields/ApplicantType__c.field-meta.xml
<CustomField>
    <fullName>ApplicantType__c</fullName>
    <description>Describes applicant type primary or joint</description>
    <label>Applicant Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>