force-app/main/default/objects/Applicant__c/fields/CitizenshipStatus__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipStatus__c</fullName>
    <description>The citizenship Status of the applicant</description>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident Alien</fullName>
            </value>
            <value>
                <fullName>Non-Permanent Resident Alien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>