force-app/main/default/objects/Applicant__c/fields/CountryOfCitizenship__c.field-meta.xml
<CustomField>
    <fullName>CountryOfCitizenship__c</fullName>
    <description>Country Of Citizenship</description>
    <label>Country Of Citizenship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>