force-app/main/default/objects/Applicant__c/fields/CreditScoreStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreStatus__c</fullName>
    <description>Save Status related to Credit Score</description>
    <label>Credit Score Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
                <default>true</default>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Reorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>