force-app/main/default/objects/Applicant__c/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <description>Customer number is he is an existing customer</description>
    <label>Customer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>