force-app/main/default/objects/Applicant__c/fields/CustomerScore__c.field-meta.xml
<CustomField>
    <fullName>CustomerScore__c</fullName>
    <description>To store Customer score result</description>
    <label>Customer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>