force-app/main/default/objects/Applicant__c/fields/CustomScore__c.field-meta.xml
<CustomField>
    <fullName>CustomScore__c</fullName>
    <description>To store Custom score result</description>
    <label>Custom Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>