force-app/main/default/objects/Applicant__c/fields/DemographicCollectedThrough__c.field-meta.xml
<CustomField>
    <fullName>DemographicCollectedThrough__c</fullName>
    <description>The Demographic Information was provided through</description>
    <label>Demographic Collected Through</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face-to-Face Interview</fullName>
            </value>
            <value>
                <fullName>Telephone Interview</fullName>
            </value>
            <value>
                <fullName>Fax or Mail</fullName>
            </value>
            <value>
                <fullName>Email or Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>