force-app/main/default/objects/Applicant__c/fields/EmailOtp__c.field-meta.xml
<CustomField>
    <fullName>EmailOtp__c</fullName>
    <description>To store Email Otp</description>
    <label>Email Otp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>