force-app/main/default/objects/Applicant__c/fields/EmailOtpAttempts__c.field-meta.xml
<CustomField>
    <fullName>EmailOtpAttempts__c</fullName>
    <description>To store Email Otp Attempts</description>
    <label>Email Otp Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>