force-app/main/default/objects/Applicant__c/fields/EmploymentVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentVerificationStatus__c</fullName>
    <label>Employment Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending,</fullName>
            </value>
            <value>
                <fullName>Approved,</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>