force-app/main/default/objects/Applicant__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <description
  >the fact or state of belonging to a social group that has a common national or cultural tradition</description>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>I do not wish to provide this information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>