force-app/main/default/objects/Applicant__c/fields/EthnicityCollectedOnVisual__c.field-meta.xml
<CustomField>
    <fullName>EthnicityCollectedOnVisual__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Was the ethnicity of the Borrower collected on the basis of visual observation or surname?</description>
    <label>Ethnicity Collected On Visual</label>
    <type>Checkbox</type>
</CustomField>