force-app/main/default/objects/Applicant__c/fields/EthnicityOtherHispanicOrLatino__c.field-meta.xml
<CustomField>
    <fullName>EthnicityOtherHispanicOrLatino__c</fullName>
    <label>Ethnicity Other Hispanic Or Latino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>