force-app/main/default/objects/Applicant__c/fields/EthnicityTypeHispanicOrLatino__c.field-meta.xml
<CustomField>
    <fullName>EthnicityTypeHispanicOrLatino__c</fullName>
    <description
  >Hispanic refers to individuals who are Spanish-speaking or have a background in a Spanish-speaking country. Latino refers to those who are from or have a background in a Latin American country</description>
    <label>Ethnicity Type Hispanic Or Latino</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Puerto Rican</fullName>
            </value>
            <value>
                <fullName>Cuban</fullName>
            </value>
            <value>
                <fullName>Other Hispanic or Latino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>