force-app/main/default/objects/Applicant__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>