force-app/main/default/objects/Applicant__c/fields/FlowState__c.field-meta.xml
<CustomField>
    <fullName>FlowState__c</fullName>
    <description>Page name where the flow is stopped.</description>
    <inlineHelpText>Page name where the flow is stopped.</inlineHelpText>
    <label>Flow State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowState</valueSetName>
    </valueSet>
</CustomField>