force-app/main/default/objects/Applicant__c/fields/FraudStatus__c.field-meta.xml
<CustomField>
    <fullName>FraudStatus__c</fullName>
    <label>Fraud Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>