force-app/main/default/objects/Applicant__c/fields/GenderCollectedOnVisual__c.field-meta.xml
<CustomField>
    <fullName>GenderCollectedOnVisual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the sex of the Borrower collected on the basis of visual observation or surname?</description>
    <label>Gender Collected On Visual</label>
    <type>Checkbox</type>
</CustomField>