force-app/main/default/objects/Applicant__c/fields/HighRiskConsumer__c.field-meta.xml
<CustomField>
    <fullName>HighRiskConsumer__c</fullName>
    <description>To store High Risk Consumer result</description>
    <label>High Risk Consumer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>