force-app/main/default/objects/Applicant__c/fields/IdentificationDocument__c.field-meta.xml
<CustomField>
    <fullName>IdentificationDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Object to store all identity details</description>
    <label>Identification Document</label>
    <referenceTo>FinServ__IdentificationDocument__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>