force-app/main/default/objects/Applicant__c/fields/IdentityVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>IdentityVerificationStatus__c</fullName>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>