force-app/main/default/objects/Applicant__c/fields/IncomeVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>IncomeVerificationStatus__c</fullName>
    <label>Income Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>