force-app/main/default/objects/Applicant__c/fields/isAllDisclosuresSignedAndPrinted__c.field-meta.xml
<CustomField>
    <fullName>isAllDisclosuresSignedAndPrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if all disclosures are signed by customer and printed. Used in branch channel.</description>
    <label>Is all disclosures signed and printed?</label>
    <type>Checkbox</type>
</CustomField>