force-app/main/default/objects/Applicant__c/fields/IsDifferentMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>IsDifferentMailingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant as different Mailing address</description>
    <label>Is Different Mailing Address</label>
    <type>Checkbox</type>
</CustomField>