force-app/main/default/objects/Applicant__c/fields/IsEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>IsEmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if customer email is verified</description>
    <label>Is Email Verified</label>
    <type>Checkbox</type>
</CustomField>