force-app/main/default/objects/Applicant__c/fields/IsEmploymentVerified__c.field-meta.xml
<CustomField>
    <fullName>IsEmploymentVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The employment verification if performed by the applicant</description>
    <label>Is Employment Verified</label>
    <type>Checkbox</type>
</CustomField>