force-app/main/default/objects/Applicant__c/fields/IsExistingCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsExistingCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExistingCustomer</label>
    <type>Checkbox</type>
</CustomField>