force-app/main/default/objects/Applicant__c/fields/IsFamilyConnected__c.field-meta.xml
<CustomField>
    <fullName>IsFamilyConnected__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Is your family member in part of financial account</description>
    <label>Is Family Connected</label>
    <type>Checkbox</type>
</CustomField>