force-app/main/default/objects/Applicant__c/fields/KYCCreditScore__c.field-meta.xml
<CustomField>
    <fullName>KYCCreditScore__c</fullName>
    <description>To store KYC Credit Score</description>
    <label>KYC Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>