force-app/main/default/objects/Applicant__c/fields/LastFourDigitsofSSN__c.field-meta.xml
<CustomField>
    <fullName>LastFourDigitsofSSN__c</fullName>
    <description>Last four digits of ssn</description>
    <formula>RIGHT(SSN__c, 4)</formula>
    <label>Last Four Digits of SSN</label>
    <type>Text</type>
</CustomField>