force-app/main/default/objects/Applicant__c/fields/MembershipAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>MembershipAccountNumber__c</fullName>
    <description>Membership Account number of a customer</description>
    <label>Membership Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>