force-app/main/default/objects/Applicant__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>Middle Name</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>