force-app/main/default/objects/Applicant__c/fields/OFAC__c.field-meta.xml
<CustomField>
    <fullName>OFAC__c</fullName>
    <description>To store OFAC decision details</description>
    <label>OFAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>