force-app/main/default/objects/Applicant__c/fields/OOW_Status__c.field-meta.xml
<CustomField>
    <fullName>OOW_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OOW is passed then it will be true else false</description>
    <label>OOW Status</label>
    <type>Checkbox</type>
</CustomField>