force-app/main/default/objects/Applicant__c/fields/OOWCorrectAnswers__c.field-meta.xml
<CustomField>
    <fullName>OOWCorrectAnswers__c</fullName>
    <description
  >OOW correct answer given by primary or joint applicants</description>
    <label>OOWCorrectAnswers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>