force-app/main/default/objects/Applicant__c/fields/OOWStatus__c.field-meta.xml
<CustomField>
    <fullName>OOWStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OOW is passed then it will be true else false</description>
    <label>OOW Status</label>
    <type>Checkbox</type>
</CustomField>