force-app/main/default/objects/Applicant__c/fields/OOWTotalQuestions__c.field-meta.xml
<CustomField>
    <fullName>OOWTotalQuestions__c</fullName>
    <description>Total number of OOW questions asked</description>
    <label>OOW Total Questions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>