force-app/main/default/objects/Applicant__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>To store OTP</description>
    <label>OTP</label>    
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>