force-app/main/default/objects/Applicant__c/fields/OtpAttempts__c.field-meta.xml
<CustomField>
    <fullName>OtpAttempts__c</fullName>
    <description>To Store Otp Attempts</description>
    <label>Otp Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>