force-app/main/default/objects/Applicant__c/fields/OTPExpireTime__c.field-meta.xml
<CustomField>
    <fullName>OTPExpireTime__c</fullName>
    <description>OTP expire time</description>
    <inlineHelpText>OTP expire time</inlineHelpText>
    <label>OTP Expire Time</label>
    <type>DateTime</type>
</CustomField>