force-app/main/default/objects/Applicant__c/fields/OverallDebitBureauResult__c.field-meta.xml
<CustomField>
    <fullName>OverallDebitBureauResult__c</fullName>
    <description>to store Overall Debit Bureau Result</description>
    <label>Overall Debit Bureau Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>