force-app/main/default/objects/Applicant__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Branch Password</description>
    <label>Branch Password</label>
    <length>40</length>
    <type>Text</type>
</CustomField>