force-app/main/default/objects/Applicant__c/fields/PrimaryAddress__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>