force-app/main/default/objects/Applicant__c/fields/QualifiedDecision__c.field-meta.xml
<CustomField>
    <fullName>QualifiedDecision__c</fullName>
    <description>To store Qualifile result.</description>
    <label>Qualifile Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>