force-app/main/default/objects/Applicant__c/fields/QualifiedScore__c.field-meta.xml
<CustomField>
    <fullName>QualifiedScore__c</fullName>
    <description>To store Qualified score result</description>
    <label>Qualified Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>