force-app/main/default/objects/Applicant__c/fields/QualifileScore__c.field-meta.xml
<CustomField>
    <fullName>QualifileScore__c</fullName>
    <description>To store Qualifile score result</description>
    <label>Qualifile Score</label>
    <length>40</length>
    <type>Text</type>
</CustomField>