force-app/main/default/objects/Applicant__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description
  >Associated with biology and linked with physical characteristics such as hair texture and skin color</description>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>I do not wish to provide this information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>