force-app/main/default/objects/Applicant__c/fields/RaceCollectedOnVisual__c.field-meta.xml
<CustomField>
    <fullName>RaceCollectedOnVisual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the race of the Borrower collected on the basis of visual observation or surname?</description>
    <label>Race Collected On Visual</label>
    <type>Checkbox</type>
</CustomField>