force-app/main/default/objects/Applicant__c/fields/RaceOtherAsian__c.field-meta.xml
<CustomField>
    <fullName>RaceOtherAsian__c</fullName>
    <label>Race Other Asian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>