force-app/main/default/objects/Applicant__c/fields/RaceOtherPacificIslander__c.field-meta.xml
<CustomField>
    <fullName>RaceOtherPacificIslander__c</fullName>
    <label>Race Other Pacific Islander</label>
    <length>255</length>
    <type>Text</type>
</CustomField>