force-app/main/default/objects/Applicant__c/fields/RaceTypeAsian__c.field-meta.xml
<CustomField>
    <fullName>RaceTypeAsian__c</fullName>
    <label>Race Type Asian</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian Indian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Other Asian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>