force-app/main/default/objects/Applicant__c/fields/RaceTypeNativeHawaiianOrPacificIslander__c.field-meta.xml
<CustomField>
    <fullName>RaceTypeNativeHawaiianOrPacificIslander__c</fullName>
    <label>Race Type NativeHawaiian/PacificIslander</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native Hawaiian</fullName>
            </value>
            <value>
                <fullName>Guamanian or Chamorro</fullName>
            </value>
            <value>
                <fullName>Samoan</fullName>
            </value>
            <value>
                <fullName>Other Pacific Islander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>